--- a/algorithm/algorithm.html
+++ b/algorithm/algorithm.html
@@ -28,6 +28,6 @@
 <body>
     <!-- <script src="../js/jquery_3.2.1/jquery_3.2.1.min.js"></script> -->
     <!-- <script src="../js/jquery_3.2.1/jquery_3.2.1.js"></script> -->
-    <script src="./algorithm/algorithm.js"></script>
+    <script src="./algorithm.js"></script>
 </body>
 </html>
