--- a/设计模式/prototy.html
+++ b/设计模式/prototy.html
@@ -28,8 +28,36 @@
 </head>
 <body>
 
-<script src="a.js">
+<script>
+var curring = function ( fn ) {
+    var args = []
+    return function () {
+        if ( arguments.length === 0 ) {
+            return fn.apply( this, args )
+        } else {
+            [].push.apply( args, arguments )
+            return arguments.callee // 返回该函数
+        }
+    }
+}
 
+var cost = (function () {
+    var money = 0
+
+    return function () {
+        for (var i = 0; i < arguments.length; i++) {
+            money += arguments[i]
+        }
+        return money
+    }
+})()
+
+var cost = curring( cost )
+
+cost( 100 )
+cost( 200 )
+cost( 300 )
+console.log( cost() )
 </script>
 </body>
 </html>
