--- a/设计模式/prototy.html
+++ b/设计模式/prototy.html
@@ -29,35 +29,67 @@
 <body>
 
 <script>
-var curring = function ( fn ) {
-    var args = []
+// var curring = function ( fn ) {
+//     var args = []
+//     return function () {
+//         if ( arguments.length === 0 ) {
+//             return fn.apply( this, args )
+//         } else {
+//             [].push.apply( args, arguments )
+//             return arguments.callee // 返回该函数
+//         }
+//     }
+// }
+
+// var cost = (function () {
+//     var money = 0
+
+//     return function () {
+//         for (var i = 0; i < arguments.length; i++) {
+//             money += arguments[i]
+//         }
+//         return money
+//     }
+// })()
+
+// var cost = curring( cost )
+
+// cost( 100 )
+// cost( 200 )
+// cost( 300 )
+// console.log( cost() )
+
+// (function () {
+//     Array.prototype.push.call(arguments, 4)
+//     console.log( arguments )
+// })(1, 2, 3)
+// Function.prototype.uncurring = function () {
+//     var self = this
+//     return function () {
+//         var obj = Array.prototype.shift.call( arguments )
+//         return self.apply( obj, arguments )
+//     }
+// }
+
+// var push = Array.prototype.uncurring()
+// (function () {
+//     push( arguments, 4 )
+//     console.log( arguments )
+// })(1, 2, 3)
+Function.prototype.uncurring = function () {
+    var self = this
     return function () {
-        if ( arguments.length === 0 ) {
-            return fn.apply( this, args )
-        } else {
-            [].push.apply( args, arguments )
-            return arguments.callee // 返回该函数
-        }
+        var obj = Array.prototype.shift.call( arguments )
+        return self.apply( obj, arguments )
     }
 }
-
-var cost = (function () {
-    var money = 0
-
-    return function () {
-        for (var i = 0; i < arguments.length; i++) {
-            money += arguments[i]
-        }
-        return money
-    }
-})()
-
-var cost = curring( cost )
-
-cost( 100 )
-cost( 200 )
-cost( 300 )
-console.log( cost() )
+var push = Function.prototype.uncurring()
+var obj = {
+    "length": 1,
+    "0": 1
+}
+push( obj, 2 )
+console.log(obj)
 </script>
 </body>
 </html>
